# unity2rbxlx

./: .gitignore  .gitmodules  README.md  TODO.md  test_upload.sh
converter/: .cache  ARCHITECTURE.md  CLAUDE.md  TODO.md  TODO_archive.md  config.py  convert_interactive.py  eval_baseline.json  generate_injection.py  inject_scripts.py  pyproject.toml  smoke_test.py  u2r.py  update_studio_scripts.py  verify_hook.py
converter/comparison/: __init__.py  input_recorder.py  input_replayer.py  report.py  screenshot_capture.py  state_diff.py  state_dumper.py  visual_diff.py
converter/converter/: animation_converter.py  api_mappings.py  asset_moderator.py  autogen.py  bridge_injector.py  camera_facet_lowering.py  camera_mount_equip_lowering.py  child_index_lowering.py  child_ref_resolver.py  code_transpiler.py  component_converter.py  consumable_db_seed.py  contract_pipeline.py  contract_verifier.py  cs_text_scan.py  fbx_binary.py  fps_client_generator.py  lazy_singleton_seed.py  luau_validator.py  material_mapper.py  mesh_processor.py  mesh_splitter.py  movement_facet_lowering.py  pipeline.py  prefab_packages.py  project_gravity.py  report_generator.py  rifle_rig_retarget_lowering.py  roblox_api_corpus.py  roblox_call_validator.py  roblox_dead_modules.py  roster_assembly.py  roster_consumer_lowering.py  runtime_contract.py  scene_converter.py  scene_runtime_domain.py  scene_runtime_planner.py  script_asset_rewriter.py  script_coherence.py  script_coherence_packs.py  (+19 more)
converter/core/: asset_keys.py  conversion_context.py  coordinate_system.py  flag_names.py  roblox_types.py  (+1 more)
(+674 files in other folders)
