[project]
name = "unity-roblox-converter"
version = "0.1.0"
description = "Convert Unity game projects into playable Roblox experiences"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "Pillow>=10.0",
    "trimesh>=4.0",
    "scikit-image>=0.21",
    "requests>=2.31",
    "anthropic>=0.40",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This repo layout isn't a conventional Python package — callers rely on
# `sys.path` shims in tests/ and on running `u2r.py` / `convert_interactive.py`
# directly from the repo. Don't try to auto-discover modules (setuptools would
# pick up ``tests`` and then fail when it finds no package metadata there).
py-modules = []
